--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.1",
-    "mongoose": "^8.12.2"
+    "mongoose": "^8.12.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "eslint": "^9.20.1",
